# rgrid

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTROL_ANALYSIS.md  Makefile  OPUS.md  PARALLEL_DEV_GUIDE.md  README.md  STORY_10-8_IMPLEMENTATION_SUMMARY.md  STORY_CONTEXT_GENERATION_REPORT.md  TESTING_GUIDE.md  WORK_QUEUE.md  batch_create_contexts.py  batch_create_stories.py  batch_update_status.py  complete-story.sh  console  dev1.md  dev1_tier5.md  dev2_tier5.md  dev3_tier5.md  hello_rgrid.py  overview.sh  process_all_stories.py  pyproject.toml  status.sh  test_status.py  test_stderr.py  test_tier2_complete.py
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmb/: config.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.github/workflows/: build-worker.yml
api/: alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0266a00873cc_add_artifacts_table_for_story_7_2.py  101cdc973ccc_merge_story_branches.py  50e12da834f4_add_script_cache_table_for_story_6_1.py  6a58dd03c588_add_requirements_content_story_2_4.py  7bd1d9c753bc_add_workers_and_heartbeats_tables.py  7bfedafb5ca5_add_dependency_cache_table_for_story_6_2.py  a078649d6ea3_add_batch_id_to_executions.py  a1b2c3d4e5f6_add_execution_logs_table_story_8_3.py  ab11aed7c45a_add_input_files_to_executions.py  b2c3d4e5f6a7_add_retry_columns_story_10_7.py  b5c9e1234567_add_metadata_to_executions.py  c3d4e5f6a7b8_add_user_metadata_story_10_8.py  c91e2f3a7b8d_add_cost_tracking_fields_story_9_1.py  d4e5f6a7b8c9_add_input_cache_table_story_6_4.py  d82f4a9b1c0e_add_billing_hour_tracking_story_9_2.py  e5f6a7b8c9d0_add_spending_limits_table_story_9_5.py  efbe05844f15_add_combined_cache_table_for_story_6_3.py  f2a8c9d3b7e1_add_execution_metadata_story_8_6.py  fc0e7b400c13_initial_schema_with_executions_and_api_.py
api/api/: errors.py
api/api/middleware/: error_handler.py
api/app/: __init__.py  config.py  database.py  main.py  ray_service.py  storage.py
api/app/api/v1/: auth.py  cost.py  executions.py  health.py  input_cache.py
api/app/models/: __init__.py  api_key.py  artifact.py  combined_cache.py  dependency_cache.py  execution.py  execution_log.py  input_cache.py  script_cache.py  spending_limit.py  worker.py
api/app/websocket/: __init__.py  logs.py
cli/: pyproject.toml
cli/rgrid/: __init__.py  api_client.py  batch.py  batch_download.py  batch_executor.py  batch_progress.py  cli.py  config.py  downloader.py  errors.py  network_retry.py  retry.py  spending_limits.py
cli/rgrid/commands/: cost.py  download.py  estimate.py  init.py  list.py  logs.py  retry.py  run.py  status.py
cli/rgrid/utils/: __init__.py  file_detection.py  file_download.py  file_upload.py  input_cache.py  metadata_parser.py
common/: pyproject.toml
common/rgrid_common/: __init__.py  errors.py  models.py  money.py  retry.py  runtimes.py  types.py
console/: jest.config.js  package.json
docs/: API_ENDPOINTS.md  ARCHITECTURE_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOCKER_WORKER_DEPLOYMENT.md  ERROR_REFERENCE.md  HETZNER_API_CONFIGURATION.md  MANUAL_INSPECTION_GUIDE.md  PHASE2_PERFORMANCE_REPORT.md  PRD.md  PRIVATE_NETWORK_DEPLOYMENT.md  PROJECT_BRIEF.md  QUICK_COMMANDS.md  SECURITY_AUDIT_REPORT.md  STAB5_SMOKE_TEST_REPORT.md  STAGE1_SMOKE_TEST_REPORT.md  STAGE2_E2E_VALIDATION_REPORT.md  TIER1_RETROSPECTIVE.md  TIER1_TEST_REPORT.md  TIER2_PLAN.md  TIER2_RETROSPECTIVE.md  TIER2_TEST_REPORT.md  TIER3_DEPLOYMENT_PLAN.md  TIER3_PLAN.md  TIER3_SUMMARY.md  TIER3_TEST_REPORT.md  TIER4_COMPLETION_SUMMARY.md  TIER4_DEPLOYMENT_REPORT.md  TIER4_FINAL_STATUS.md  TIER4_PLAN.md  TIER4_RETROSPECTIVE.md  TIER4_SUMMARY.md  TIER4_TEST_REPORT.md  TIER4_UPDATE.md  TIER5_8_VALIDATION_REPORT.md  TIER5_PLAN.md  TIER_ROADMAP.md  WORKER_OPERATIONS.md  architecture.md  bmm-workflow-status.yaml  caching-behavior.md  (+2 more)
docs/archive/: API_OVERVIEW.md  ARCHITECTURE-legacy.md  ARTIFACTS_MODEL.md  BACKLOG.md  BMAD_ROADMAP.md  BMAD_WORKFLOW_INIT_AND_TDD.md  CONTAINER_SECURITY.md  DATA_FLOW_DIAGRAM.md  DB_QUEUE.md  DECISIONS.md  GATE_CHECK_REPORT.md  IMPLEMENTATION_ROADMAP.md  JOB_SPEC.md  ORCHESTRATOR_DESIGN.md  QUESTIONS.md  REPO_STRUCTURE.md  REQUIREMENTS.md  RUNNER_LIFECYCLE.md  SCOPE_ADDITION_WEB_APPS.md  SEQUENCE_FLOWS.md  STORAGE_PIPELINE.md  TABLE_OF_CONTENTS.md  TENANCY_AND_AUTH.md  WORKER_NODE_MODEL.md  brainstorming-session-results-2025-11-14.md  chatlog.md
docs/sprint-artifacts/: 1-1-initialize-monorepo-project-structure.md  1-2-set-up-development-environment-and-build-system.md  1-3-implement-api-key-authentication-system.md  1-4-build-cli-framework-with-click.md  1-5-implement-rgrid-init-command-for-first-time-setup.md  1-6-set-up-fastapi-backend-with-database-connection.md  sprint-status.yaml  tech-spec-epic-1.md  tech-spec-epic-10.md  tech-spec-epic-2.md  tech-spec-epic-3.md  tech-spec-epic-4.md  tech-spec-epic-5.md  tech-spec-epic-6.md  tech-spec-epic-7.md  tech-spec-epic-8.md  tech-spec-epic-9.md
hooks/: README.md  pre-commit.sample
infra/: deploy_orchestrator.sh  docker-compose.yml  orchestrator.service
orchestrator/: __init__.py  billing.py  cost.py  daemon.py  health_monitor.py  hetzner_client.py  lifecycle_manager.py  provisioner.py  pyproject.toml
orchestrator/orchestrator/: __init__.py
runner/: Dockerfile  cleanup_daemon.py  pyproject.toml
runner/runner/: __init__.py  cache.py  dependency_installer.py  executor.py  file_handler.py  heartbeat.py  log_streamer.py  models.py  output_collector.py  poller.py  ray_tasks.py  storage.py  worker.py
scripts/: e2e-staging-validation.sh  setup_minio_lifecycle.py  setup_private_network.py  smoke-test-staging.sh
tests/: __init__.py  conftest.py
website/: README.md  jest.config.js  package.json
(+237 files in other folders)
