[project]
name = "rgrid"
version = "0.1.0"
description = "RGrid CLI - Run Python scripts remotely with zero friction"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rgrid-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[project.scripts]
rgrid = "rgrid.cli:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rgrid"]
